--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/LuisMayo/vhs-alternative-server#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
