--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "homepage": "https://github.com/LuisMayo/vhs-alternative-server#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4"
   }
 }
