--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
+    "mongodb": "^5.2.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.6",
-    "typeorm": "^0.3.17",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
