--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.2.0",
     "morgan": "^1.10.0",
+    "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4"
+    "@types/morgan": "^1.9.4",
+    "@types/randomstring": "^1.1.8"
   }
 }
