--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/LuisMayo/vhs-alternative-server#readme",
   "dependencies": {
+    "@seald-io/nedb": "^4.0.2",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.2.0",
