--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/LuisMayo/vhs-alternative-server#readme",
   "dependencies": {
+    "@seald-io/nedb": "^4.0.2",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
-    "mongodb": "^5.2.0",
     "morgan": "^1.10.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
