--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "program": "${workspaceFolder}/build/index.js",
             "console": "integratedTerminal",
             // "runtimeArgs": ["--inspect-brk"],
+            "args": ["--disableRealPort"],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
