--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@seald-io/nedb": "^4.0.2",
     "express": "^4.18.2",
-    "jwt-decode": "^3.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
     "morgan": "^1.10.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
@@ -30,6 +31,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwk-to-pem": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/randomstring": "^1.1.8"
   }
