Added admin dashboard with savegame removal

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "program": "${workspaceFolder}/build/index.js",
             "console": "integratedTerminal",
             // "runtimeArgs": ["--inspect-brk"],
-            "args": ["--disableRealPort"],
+            // "args": ["--disableRealPort"],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
