--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@seald-io/nedb": "^4.0.2",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
     "morgan": "^1.10.0",
