--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "program": "${workspaceFolder}/build/index.js",
             "console": "integratedTerminal",
             // "runtimeArgs": ["--inspect-brk"],
-            "args": ["--disableRealPort", "--bypassEpicValidation", "--disableAdminPassword"],
+            "args": ["--disableRealPort", "--bypassEpicValidation", "--disableAdminPassword", "--bypassOwnValidation"],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
