--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -37,6 +38,7 @@
     "@types/jwk-to-pem": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/randomstring": "^1.1.8",
+    "@types/ws": "^8.5.12",
     "pkg": "^5.8.1",
     "rimraf": "^5.0.1"
   }
