--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             ],
             "program": "${workspaceFolder}/build/index.js",
             "console": "integratedTerminal",
-            // "runtimeArgs": ["--inspect-brk"],
+            "runtimeArgs": ["--max-old-space-size=4096"],
             "args": ["--disableRealPort", "--bypassEpicValidation", "--disableAdminPassword", "--bypassOwnValidation"],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
