--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
+    "mongodb": "^6.10.0",
     "morgan": "^1.10.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
